patient css and html

--- a/patient.html
+++ b/patient.html
@@ -155,12 +155,12 @@
                 <h4>Are you taking medication ?</h4>
                 <input type="radio" name="chk">
                 <label for=" ">Yes</label>
-                <input type="radio " name="chk ">
+                <input type="radio" name="chk ">
                 <label for=" ">No</label>
                 <input type="text " id="medication " disabled>
-                <div class="med">
+                <!-- <div class="med">
                     <p id="message1 "></p>
-                </div>
+                </div> -->
             </div>
 
         </section>
